--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,6 +9,42 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+
+     <!-- this is a wrapper for all the conntent on the page -->
+     <div class="wrapper">
+         <!-- this is a wrapper for the nav content -->
+            <div class="header wrapper">
+                <div class="name"> <h1>Dan Byler</h1> </div>
+               
+                <div class="nav">
+                    <nav>
+                        <li a href="#">About</li>
+                        <li a href="#">Portfolio</li>
+                        <li a href="#">Contact</li>
+                    </nav>
+                </div>
+            </div>
+        <!-- This is the main content section -->
+        <div class="contentWrapper">
+            <h2>Contact</h2>
+            <form action="/my-handling-form-page" method="post">
+                <div>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="user_name">
+                </div>
+                <div>
+                    <label for="mail">E-mail:</label>
+                    <input type="email" id="mail" name="user_mail">
+                </div>
+                <div>
+                    <label for="msg">Message:</label>
+                    <textarea id="msg" name="uer_message"></textarea>
+                </div>
+                <div class="button">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
