--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 <body>
     <!-- this is a wrapper for all the conntent on the page -->
     <div class="wrapper">
-        <div class="name"> <h1>Dan Byler</h1> </div>
+        <!-- this is a wrapper for the nav content -->
+        <div class="header wrapper">
+            <div class="name"> <h1>Dan Byler</h1> </div>
            
-        <div class="nav">
-            <ul>
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>Contact</li>
-            </ul>
+            <div class="nav">
+                <nav>
+                    <li a href="#">About</li>
+                    <li a href="#">Portfolio</li>
+                    <li a href="#">Contact</li>
+                </nav>
+            </div>
         </div>
                 <!-- This is the main content section -->
         <div class="contentWrapper">
             <!-- about me section -->
             <div class="content">
-                <img src="assets/images/product.jpg" alt="profile picture">
+                <img src="assets/images/BylerheadShot.png" alt="profile picture">
                 <p>My name is Dan Byler. I'm a multi-passionate entreprenureal professional. 
                     I can be found at different times practicing martial arts, creating instructional programs 
                     and content, conducting trainings, making food, learning web development, working on 
@@ -41,7 +44,11 @@
             <div class="connect">
                 <h2>Connect with Me</h2>
                 <hr>
-                <p>Connect with me on linkedIn</p>
+                <ul>
+                    <li><a href="#"><img src="assets/images/GitHub-Mark-32px.png" alt="github logo"></a></li>
+                    <li><a href="#"><img src="assets/images/In-2C-34px-R.png" alt="github logo"></a></li>
+                    <li><a href="#"><img src="assets/images/so-icon.png" alt="github logo"></a></li>
+                </ul>
                 
             </div>
         </div>
